--- a/src/empenofacil/view/Contratos.fxml
+++ b/src/empenofacil/view/Contratos.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
@@ -18,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<StackPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="empenofacil.controller.ContratosController">
+<StackPane xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="empenofacil.controller.ContratosController">
     <children>
         <VBox fx:id="contratosV">
             <children>
@@ -51,7 +46,8 @@
                            </font>
                         </Label>
                         <Button mnemonicParsing="false" onAction="#cancelarContrato" text="Cancelar empeño" />
-                        <Button mnemonicParsing="false" onAction="#clonarContrato" text="Reempeño" />
+                        <Button mnemonicParsing="false" onAction="#finiquito" text="Finiquito" />
+                        <Button mnemonicParsing="false" onAction="#refrendo" text="Refrendo" />
                         <Button mnemonicParsing="false" onAction="#generarContrato" text="Generar Contrato" />
                         <Button mnemonicParsing="false" onAction="#imprimirEtiquetas" text="Imprimir Etiquetas" />
                      </children>
